[package]
name = "ultrasound"
version = "0.3.1"
edition = "2024"

[features]
flac_hifi = []

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
json5 = "1.3.1"
md-5 = "0.11.0"
rayon = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28.0", features = ["derive"] }
lewton = "0.10"

[dev-dependencies]
vorbis_rs = "0.5"
